# MonaServer2

./: CMakeLists.txt  CMakeSettings.json  README.md
MonaBase/: CMakeLists.txt  windows.cmake
MonaBase/include/Mona/: Mona.h
MonaCore/: CMakeLists.txt  windows.cmake
MonaCore/include/Mona/: ADTSWriter.h
MonaCore/include/Mona/WS/: WSProtocol.h
MonaCore/sources/: MediaReader.cpp  MediaWriter.cpp
MonaServer/: CMakeLists.txt  windows.cmake
MonaTiny/: CMakeLists.txt  windows.cmake
